AC_INIT([QuantumXML], [0.1], [sigsegv@quantumfish.com], [QuantumXML], [http://www.quantumfish.com/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_PROG_CXX
LT_INIT([disable-static])

AC_SUBST([QUANTUMXML_SO_VERSION], [0:1:0])
AC_SUBST([QUANTUMXML_API_VERSION], [1.0])

AC_CONFIG_FILES([Makefile QuantumXML-1.0.pc])

AC_OUTPUT

